# ciencia-de-datos

./: .env  .gitignore  docusaurus.config.js  main.py  notas.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: 03-python.md  04-estadistica.md  autor.md  intro.mdx
docs/02-introduccion/: 1-ciclo_de_vida.md  2-flujo_de_trabajo.md  3-herramientas.md  4-etica.md  _category_.json
docs/05.bases-de-datos/: 2-sql.md  3-postgresql.md  _category_.json
docs/06-analisis_de_datos/: _category_.json
docs/07-pandas/: 0-introduccion.md  1-pandas.md  2-datosyalmacenamiento.md  3-preparacion.md  Pandas_vs_Polars.md  _category_.json
docs/08-Text Mining/: README.md
docs/08-text-mining/: Analisis_Criminologico.ipynb  README.md  _category_.json
docs/08-visualizacion/: 1-fundamentos.md  2-percepcion.md  3-storytelling.md  4-matplotlib.md  5-seaborn.md  6-plotly.md  Streamlit.md  _category_.json
docs/08-visualizacion/matplotlib_types/arrays/: barbs.ipynb
docs/08-visualizacion/matplotlib_types/stats/: ecdf.ipynb
docs/08-visualizacion/matplotlib_types/unstructured/: tricontourf.ipynb
docs/09-aprendizaje_supervisado/: README.md  _category_.json
docs/09-visualizacion/: 1-fundamentos.md  2-percepcion.md  3-storytelling.md  4-matplotlib.md  5-seaborn.md  6-plotly.md  Streamlit.md  _category_.json
docs/09-visualizacion/matplotlib_types/3D/: bar3d_simple.ipynb  fill_between3d_simple.ipynb
docs/09-visualizacion/matplotlib_types/arrays/: pcolormesh.ipynb  streamplot.ipynb
docs/09-visualizacion/matplotlib_types/stats/: boxplot_plot.ipynb
docs/09.1-Streamlit/: 1-streamlit.md  2-desarrollo.md  2-widgets.md  3-desarrollo.md  4-streamlit_grafico.md  _category_.json
docs/10-aprendizaje_profundo/: 03a_transfer_learning.ipynb  1.Perceptron.ipynb  ANN-keras-tuner-demografia.ipynb  CNN.ipynb  Tensorboard.ipynb  Transfer learning.md  _category_.json  red_neuronal.md
docs/10-aprendizaje_supervisado/: README.md  _category_.json  arboles.md
docs/10-prendizaje_no_supervisado/: README.md  _category_.json
docs/11-aprendizaje_no_supervisado/: _category_.json
docs/11-aprendizaje_profundo/: 1-fundamentos.md  2-redes_neuronales.md  Transfer learning.md  _category_.json
docs/11-casos/: Detección_de_anomalias.ipynb
docs/12-aprendizaje_profundo/: _category_.json
docs/12-bigdata/: 1-intro.md  _category_.json  databricks.md  spark.ipynb  spark.md
docs/12-casos/: Deteccion de anomalias financieras.ipynb  _category_.json
docs/13-bigdata/: _category_.json  mongodb.md
docs/13-casos/: _category_.json
docs/13-produccion/: Apache Airflow.ipynb  _category_.json  mlflow.ipynb
docs/13-produccion/mlruns/1/2c599d631c9a493da6a56256cb9e715f/artifacts/: estimator.html
docs/13-produccion/mlruns/1/c7f2e2977e864a91b083984140797b3c/artifacts/: estimator.html
docs/13-produccion/mlruns/1/models/m-b8ad34cfb7ad41cb8065a4e992b9d1ac/artifacts/: MLmodel
docs/13-produccion/mlruns/1/models/m-ca1da99a74304c3b89f4a333fdc9d7dd/artifacts/: conda.yaml
docs/14-bigdata/: 1-intro.md  _category_.json  spark.md
docs/14-produccion/: Apache Airflow.md  _category_.json  git.md
docs/14-produccion/mlruns/1/46011918ec9749b4a09ca6216a080495/artifacts/: estimator.html
docs/15-produccion/: 1-intro.md  2-etl.md  _category_.json  airflow.md  docker.md  git.md  mlflow.db
docs/15-produccion/mlruns/1/43e012c05fdf4598a2eb07f8a6b79754/artifacts/: estimator.html
docs/16-IA/: Modelos LLM.md  _category_.json  prompt.ipynb
docs/3-python/: _category_.json
docs/4-estadistica/: 1-intro.md  Referencias.md  _category_.json
docs/5.Bases de datos/: 1-intro.md  _category_.json
docs/6-analisis_de_datos/: 1-intro-analisis.md  _category_.json
docs/7-visualizacion/: 1-introduccion.md  3-storytelling.md  Matplotlib.ipynb  Quarto.qmd  Seaborn.ipynb  _category_.json
docs/7-visualizacion/matplotlib_types/arrays/: contour.ipynb  contourf.ipynb  imshow.ipynb
docs/7-visualizacion/matplotlib_types/basic/: scatter_plot.ipynb
docs/7-visualizacion/matplotlib_types/stats/: errorbar_plot.ipynb  violin.ipynb
docs/8-aprendizaje_supervisado/: KNN.ipynb  README.md  Regresion_lineal.ipynb  SVM.ipynb  _category_.json
docs/9-prendizaje_no_supervisado/: 7.2-PCA-BreastCancer.ipynb  ADAM.ipynb  Cluster_Mall.ipynb  Cluster_adv_Mall.ipynb  Clustering.ipynb  DBSCAN.ipynb  Mall_Customers_with_clusters.csv  Notebook_Adam_vs_GD_Regresion_Lineal.ipynb  OLS.ipynb  PCA-cancer.py  README.md  _category_.json  kmeans.ipynb  kmeans_california_housing.ipynb  kmeans_wine_pipeline.joblib  main.py  modelo_pca_kmeans_breast_cancer.pkl  salud.ipynb  titanic.ipynb
docs/IA/: README.md
docs/Text Mining/: Analisis_NLTK_Chile_Final.ipynb
notebooks/: 2-sql copy.md
notebooks/analitica/: 2.Limpieza de Datos.ipynb  3.Titanic-EDA.ipynb  Excel.ipynb  analisis_de_datos.ipynb  casosalarios.ipynb  castro.ipynb  desbalance.ipynb  pivot.ipynb
notebooks/aprendizaje_no_supervisado/: 7.2-PCA-iris.ipynb  7.2-PCA.ipynb  Descenso de gradiente.ipynb  OLS.ipynb  PCA-cancer-modelo.ipynb  kmeans_wine.ipynb  pca-cancer.ipynb  segmentacion_mall_kmeans.ipynb  similaridad.ipynb
notebooks/aprendizaje_profundo/: ANN-Keras tuner.ipynb  ANN-clasificacion.ipynb  TL_CNN.ipynb  TL_Torch_flowers102.ipynb  Transfer_Learning_Oxford_Flowers102.ipynb
notebooks/aprendizaje_supervisado/: Arboles.ipynb  Optimizacion avanzada.ipynb  Regresion_logistica.ipynb  Scikit-Learn.ipynb  ensemble.ipynb
notebooks/estadistica/: 1.Estadistica_descriptiva.ipynb  2.Estadistica_inferencial.ipynb  4.Analisis_predictivo.ipynb  5.Probabilidad.ipynb  6.Inferencia_Bayesiana.ipynb  Distribucion de probabilidades.ipynb  Ley_benford.ipynb  Markov.ipynb  Regresion_lineal_simple.ipynb  bootstrapping.ipynb  hipotesis.ipynb  quantiles.ipynb
notebooks/visualizacion/: 4-seaborn.ipynb  COVID-19.ipynb  Matplotlib.ipynb  Seaborn.ipynb  Streamlit.ipynb  plotly.ipynb  plotly.md  seaborn.ipynb
src/components/HomepageFeatures/: index.js
src/css/: custom.css
src/pages/: index.js
static/data/: plan_de_compras_2025.xlsx  resumen-covid.csv
(+9 files in other folders)
