[project]
name = "ciencia-de-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2wsgi==1.10.10",
    "absl-py==2.3.1",
    "aiosmtplib==5.0.0",
    "aiosqlite==0.21.0",
    "alembic==1.17.2",
    "altair==6.0.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "apache-airflow==3.1.6",
    "apache-airflow-core==3.1.6",
    "apache-airflow-providers-common-compat==1.11.0",
    "apache-airflow-providers-common-io==1.7.0",
    "apache-airflow-providers-common-sql==1.30.2",
    "apache-airflow-providers-postgres==6.5.1",
    "apache-airflow-providers-smtp==2.4.1",
    "apache-airflow-providers-standard==1.10.2",
    "apache-airflow-task-sdk==1.1.6",
    "appnope==0.1.4",
    "argcomplete==3.6.3",
    "asgiref==3.11.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "cachetools==6.2.4",
    "cadwyn==5.4.6",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cron-descriptor==2.0.6",
    "croniter==6.0.0",
    "cryptography==46.0.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "deprecated==1.3.1",
    "dill==0.4.0",
    "dm-tree==0.1.9",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "einops==0.8.1",
    "email-validator==2.3.0",
    "entrypoints==0.4",
    "et-xmlfile==2.0.0",
    "etils==1.13.0",
    "executing==2.2.1",
    "faker==39.0.0",
    "fastapi==0.117.1",
    "fastapi-cli==0.0.20",
    "fastapi-cloud-cli==0.9.0",
    "fastar==0.8.0",
    "fastjsonschema==2.21.2",
    "favicon==0.7.0",
    "flask==3.1.2",
    "flatbuffers==25.12.19",
    "fonttools==4.60.1",
    "fsspec==2026.1.0",
    "gast==0.7.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.72.0",
    "greenback==1.3.0",
    "greenlet==3.3.0",
    "grpcio==1.76.0",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "htbuilder==0.9.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "imbalanced-learn==0.14.0",
    "immutabledict==4.2.2",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "keras==3.13.0",
    "kiwisolver==1.4.9",
    "lazy-object-proxy==1.12.0",
    "libclang==18.1.1",
    "libcst==1.8.6",
    "linkify-it-py==2.0.3",
    "lockfile==0.12.2",
    "lxml==6.0.2",
    "mako==1.3.10",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markdownlit==0.0.7",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "methodtools==0.4.7",
    "millify==0.1.1",
    "ml-dtypes==0.5.4",
    "mlxtend==0.23.4",
    "more-itertools==10.8.0",
    "msgspec==0.20.0",
    "namex==0.1.0",
    "narwhals==2.14.0",
    "natsort==8.4.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "opencv-python==4.13.0.92",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "optuna==4.6.0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pathlib-abc==0.5.2",
    "pathspec==1.0.3",
    "pendulum==3.1.0",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "plotly==6.5.0",
    "pluggy==1.6.0",
    "prometheus-client==0.23.1",
    "promise==2.3",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.2",
    "psutil==7.1.3",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py4j==0.10.9.9",
    "pyarrow==22.0.0",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pygtrie==2.5.0",
    "pyjwt==2.10.1",
    "pymdown-extensions==10.19.1",
    "pyparsing==3.2.5",
    "pyspark==4.1.1",
    "python-daemon==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyyaml-ft==8.0.0",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "reportlab==4.4.9",
    "requests==2.32.5",
    "retryhttp==1.4.0",
    "rich==14.2.0",
    "rich-argparse==1.7.2",
    "rich-toolkit==0.17.1",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "sentry-sdk==2.49.0",
    "setproctitle==1.3.7",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "simple-parsing==0.1.7",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sqlalchemy==1.4.54",
    "sqlalchemy-jsonfield==1.0.2",
    "sqlalchemy-utils==0.42.1",
    "sqlparse==0.5.5",
    "st-annotated-text==4.0.2",
    "st-theme==1.2.3",
    "stack-data==0.6.3",
    "starlette==0.48.0",
    "streamlit==1.52.2",
    "streamlit-avatar==0.1.3",
    "streamlit-camera-input-live==0.2.0",
    "streamlit-card==1.0.2",
    "streamlit-embedcode==0.1.2",
    "streamlit-extras==0.6.0",
    "streamlit-faker==0.0.3",
    "streamlit-image-coordinates==0.1.9",
    "streamlit-keyup==0.3.0",
    "streamlit-toggle-switch==1.0.2",
    "streamlit-vertical-slider==2.5.5",
    "structlog==25.5.0",
    "svcs==25.1.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "tensorflow-datasets==4.9.9",
    "tensorflow-hub==0.16.1",
    "tensorflow-metadata==1.17.3",
    "termcolor==3.3.0",
    "text-unidecode==1.3",
    "tf-keras==2.20.1",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "universal-pathlib==0.2.6",
    "urllib3==2.5.0",
    "uuid6==2025.0.1",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websockets==16.0",
    "werkzeug==3.1.5",
    "wheel==0.45.1",
    "wirerope==1.0.0",
    "wrapt==2.0.1",
    "xgboost==3.1.2",
    "zipp==3.23.0",
]
